--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
   </article>
 </a>
         <!-- Card 3 -->
-        <a href="https://www.youtube.com/watch?v=QO3-AAVTeDA&t=16s"
+        <a href="https://www.youtube.com/watch?v=aA4wELcz6uw&list=RDaA4wELcz6uw&start_radio=1"
    target="_blank" rel="noopener noreferrer"
    class="block">
   <article class="rounded-3xl overflow-hidden bg-neutral-900/70 border border-neutral-800 hover:border-neutral-700 transition hover:shadow-lg">
     <img src="./assets/projects/myproject3.jpg" alt="FADED DECADE magazine cover" class="h-56 w-full object-cover"/>
     <div class="p-5">
-      <h3 class="font-medium">VICE - How to Hitchhike Across America: Thumbs Up Season 1 (Part 1/5)</h3>
-      <p class="text-sm text-neutral-400 mt-1">A deep dive into the art of hitchhiking, exploring the culture, the risks, and the stories from the road.</p>
+      <h3 class="font-medium">LOS KEMET - Pootie Tang (Official Music Video)</h3>
+      <p class="text-sm text-neutral-400 mt-1">Featuring Adrian XLVII as Field cracker #2!</p>
           </div>
         </article>
         </a>
